--- a/templates/ViewCart_bkp_0702.html
+++ b/templates/ViewCart_bkp_0702.html
@@ -286,7 +286,7 @@ function ValidateCouponCode()
 	{%endif%}
 {%endif%}
 <tr>
-	<td><b>{{shippingCategory.name}} Total</b></td>
+	<td><b>Supplies Total</b></td>
 	<td>$<b>{{shippingCategory.supplies_total|floatformat:2}}</b></td>
 </tr>
 </table>
