--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -35,8 +35,8 @@ $(document).ready(function(){
  
 <div class="float-left width10">&nbsp;&nbsp;</div>
 <div class="float-left wid748 padtop15">
-<div class="clr my_account_link">Home<span> &gt; My Account</span></div>
-<div class="clr my_account_title padtop20 padbottom13">My Account</div>
+<div class="clr my_account_link"><span><a href="/">Home</a> &gt; <a href="/myaccount">My Account</a></span></div>
+<div class="clr my_account_title padtop1 padbottom10">&nbsp;</div>
 <div class="clr myaccount_bg" style="height:100% !important;">
 <div class="clr">
 <div class="float_left padtop18 padleft20 myaccount_txt1">Welcome Back, {{customer.billing_firstname}} {{customer.billing_lastname}}<br />
@@ -52,7 +52,7 @@ $(document).ready(function(){
 <a href="/ordertracking">
 <div class="vertical_inner">
 <div class="float-left"><img src="misc/images/car_img.png" width="17" height="14" border="0" /></div>
-<div class="float-left padleft10">TRACK YOUR RECENT ORDERS<br />
+<div class="float-left padleft10">VIEW & TRACK ORDERS<br />
  
 </div>
 </div>
@@ -78,7 +78,7 @@ $(document).ready(function(){
 <a href="/mywishlist">
 <div class="vertical_inner">
 <div class="float-left"><img src="misc/images/reward_img.png" width="17" height="17" border="0" /></div>
-<div class="float-left padleft10">MY WISH LIST</div>
+<div class="float-left padleft10">My Waiting List</div>
 </div>
 </a>
 </li>
