--- a/templates/myaccount_links.htm
+++ b/templates/myaccount_links.htm
@@ -6,7 +6,7 @@
 <a href="/ordertracking">
 <div class="vertical_inner_new">
 <div class="float-left"><img src="misc/images/car_img.png" width="17" height="14" border="0" /></div>
-<div class="float-left padleft5">TRACK YOUR ORDERS 
+<div class="float-left padleft5">VIEW & TRACK ORDERS 
 </div>
 </div>
 </a>
@@ -65,7 +65,7 @@
 <a href="/mywishlist">
 <div class="vertical_inner">
 <div class="float-left"><img src="/misc/images/list_img.png" width="17" height="18" border="0" /></div>
-<div class="float-left padleft10 ">MY WISH LIST</div>
+<div class="float-left padleft10 ">My Waiting List</div>
 </div>
 </a></li>
 </ul>
