--- a/templates/CheckOutLogin_bkp_0707.html
+++ b/templates/CheckOutLogin_bkp_0707.html
@@ -145,10 +145,7 @@ $(function() {
 
 <div class="clr">
 <form method="POST" action="/guestlogin" name="form2" id="form2">
-{% csrf_token %}{% if message or error_message2 %}
-      <p class="greentext">{{ message }} <span class="redtext">{{ error_message2 }}</span></p>
-      {% endif %}
-<div class="clr card1_txt_right-new6"><label>Email Address</label><input type="text" name="EMail" value="" class="wid210" id="emailcheckout" /></div>
+{% csrf_token %}<div class="clr card1_txt_right-new6"><label>Email Address</label><input type="text" name="EMail" value="" class="wid210" id="emailcheckout" /></div>
 
 </div>
 <div class="clr padtop20">
