--- a/templates/reefrewards.htm
+++ b/templates/reefrewards.htm
@@ -5,7 +5,7 @@
 {% load tagsfilter %}
 <div class="float-left width10">&nbsp;&nbsp;</div>
 <div class="float-left wid748 padtop5">
-<div class="clr my_account_link padbottom13">Home  <span> &gt; My Account </span><span> &gt; My Rewards - Details </span></div>
+<div class="clr my_account_link padbottom13"><span><a href="/">Home</a> &gt; <a href="/myaccount">My Account</a></span><span> &gt; My Rewards - Details </span></div>
  <div class="clr my_account_title padtop5 padbottom13">MY REWARDS - DETAIL </div>
 <div class="clr myaccount_bg1">
  
@@ -37,19 +37,8 @@
 <tr bgcolor="#ff9900;"><td align=left>Total Rewards</td><td colspan=2>{{totalrewards.points__sum}}</td></tr>
 </table>
 {% endif %}
-
- 
  </div>
 </div>
-
-
-
-
-
-
 <div class="float-left wid10"></div>
-
 </div>
- 
-
 {% endblock content %}
