--- a/templates/wishlistitems.html
+++ b/templates/wishlistitems.html
@@ -17,7 +17,7 @@
 {% load tagsfilter %}
 <div class="float-left width10">&nbsp;&nbsp;</div>
 <div class="float-left wid748 padtop5">
-<div class="clr my_account_link padbottom13">Home  <span> &gt; My Account </span><span> &gt; My Wish List </span></div>
+<div class="clr my_account_link padbottom13"><span><a href="/">Home</a> &gt; <a href="/myaccount">My Account</a></span><span> &gt; My Wish List </span></div>
  <div class="clr my_account_title padtop5 padbottom13">MY WISH LIST </div>
 <div class="clr myaccount_bg1">
  
